# jkit-cli

./: Cargo.toml  README.md
crates/jkit/: Cargo.toml
crates/jkit/src/: design.rs  envelope.rs  lib.rs  main.rs  util.rs
crates/jkit/src/api_spec/: mod.rs
crates/jkit/src/changes/: bootstrap.rs  complete.rs  doctor.rs  init.rs  mod.rs  status.rs  summary.rs  validate.rs
crates/jkit/src/conflicts/: mod.rs  report.rs
crates/jkit/src/contract/: mod.rs  service_meta.rs  stage.rs  stage_status.rs
crates/jkit/src/coverage/: filter.rs  mod.rs  model.rs  parser.rs  scorer.rs
crates/jkit/src/domain_context/: mod.rs
crates/jkit/src/domain_layout/: mod.rs
crates/jkit/src/domains/: add.rs  doctor.rs  list.rs  mod.rs  set.rs  yaml.rs
crates/jkit/src/drift/: check.rs  mod.rs  report.rs
crates/jkit/src/feature/: init.rs  mod.rs  start.rs
crates/jkit/src/init/: mod.rs  scaffold.rs
crates/jkit/src/migrate/: call_graph.rs  domain_model.rs  infer_domains.rs  mod.rs  parse.rs  scaffold_docs.rs  smartdoc.rs
crates/jkit/src/migration/: apply.rs  build_tool.rs  check_prereqs.rs  diff.rs  mod.rs  place.rs
crates/jkit/src/permissions/: mod.rs
crates/jkit/src/pom/: add_dep.rs  mod.rs  prereqs.rs  xml.rs
crates/jkit/src/proposed_api/: mod.rs  validate.rs
crates/jkit/src/scenarios/: gap.rs  mod.rs  prereqs.rs
crates/jkit/src/scenarios_yaml/: mod.rs
crates/jkit/templates/: docker-compose.test.yml
crates/jkit/tests/: coverage_integration.rs  init_integration.rs  migrate_scaffold_docs.rs  pom_integration.rs  standards_integration.rs
docs/: jkit-contract-prd.md  (+5 more)
(+21 files in other folders)
