[package]
name = "jkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Java-specific developer-pipeline CLI (pom, coverage, scenarios, migration, contract)"

[[bin]]
name = "jkit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
walkdir = "2"
which = "6"
heck = "0.5"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
regex = "1"
tera = "1"
url = "2.5"
tokio = { version = "1", features = ["rt", "macros"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "mysql", "any"] }
sha2 = "0.10"
tree-sitter = "0.24"
tree-sitter-java = "0.23"

[dev-dependencies]
tempfile = "3"
